@@ -295,6 +295,10 @@ shutdownRebootAction.Action.shortDescription=Reboot when downloads complete
 areYouSureYouWantToRemove=Are you sure you want to remove selected link(s) from the list?
 #EndNew!
 
+refreshProxyList.Action.text=&Refresh proxy list
+refreshProxyList.Action.shortDescription=Refresh the list of proxies
+refreshProxyList.Action.smallIcon=${iconsPath}refresh_proxy_list.png
+refreshProxyList.Action.accelerator=
 
 contextDialogHelpAction.Action.text=&Help
 contextDialogHelpAction.Action.accelerator = F1
@@ -452,9 +456,6 @@ removeInvalidLinksAction.Action.accelerator=shortcut DELETE
 
 #column '?' tooltip
 checkedColumnTooltip=URL validation
-
-refreshProxyList.text=Refresh proxy list
-
 
 ##Cut&Copy actions
 cut.Action.text = Cu&t
